Some css modified. Clean code before making the color object and the charts

--- a/package.json
+++ b/package.json
@@ -14,6 +14,8 @@
     "@fullcalendar/interaction": "^6.1.15",
     "@fullcalendar/list": "^6.1.15",
     "@fullcalendar/timegrid": "^6.1.15",
+    "@material/web": "^2.3.0",
+    "chart.js": "^4.4.8",
     "core-js": "^3.40.0",
     "parcel": "^2.13.3",
     "regenerator-runtime": "^0.14.1"
