--- a/package.json
+++ b/package.json
@@ -20,6 +20,7 @@
     "chartjs-adapter-date-fns": "^3.0.0",
     "chartjs-chart-matrix": "^3.0.0",
     "core-js": "^3.40.0",
+    "date-fns": "^4.1.0",
     "parcel": "^2.13.3",
     "regenerator-runtime": "^0.14.1",
     "utils": "^0.3.1"
